<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="manage">城市管理</string>
    <string name="atten">我关注的城市</string>
    <string name="app_name">百宝箱</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refer">全能归属地查询</string>
    <string name="deta">电话号码/身份证号/邮编查询地址</string>
    <string name="impo">请输入查询内容</string>
    <string name="quer">开始查询</string>
    <string name="resu">查询结果:</string>
    <string name="ac">AC</string>
    <string name="parities">汇率转换</string>
    <string name="merchant">查询附近</string>
    <string name="express">快递查询</string>
    <string name="figure">数字大写</string>
    <string name="counter">计算器</string>
    <string name="weather">天气预报</string>
    <string name="length">长度换算</string>
    <string name="acreage">面积换算</string>
    <string name="volume">体积换算</string>
    <string name="jiajian">+/-</string>
    <string name="pre">%</string>
    <string name="divide">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ride">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="jian">—</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="jia">+</string>
    <string name="zero">0</string>
    <string name="dian">.</string>
    <string name="equ">=</string>
    <string name="person_intro">孙骁骁，1985年4月22日出生于重庆渝中区，主持人、演员，毕业于中国传媒大学播音与主持专业04级本科班。
        2007年进入湖南娱乐频道，主持娱乐节目《娱乐急先锋》。在《挑战麦克风》、《节节高声》、《快乐女声》等众多节目担任主持。
        2010年与马天宇主演《宝贝妈妈宝贝女》。2011年与郑恺、魏巍主演《我的青春在延安》。
        2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，2013年9月28日与张翰、郑爽主演《胜女的代价2》 。
        2015年5月11日，李响单膝跪地求婚孙骁骁，孙骁骁飙泪点头。
        演绎经历:
        2010年与马天宇主演《宝贝妈妈宝贝女》。2011年与郑恺、魏巍主演《我的青春在延安》。
        2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，
        演绎经历:  2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，  2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，
          2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，  2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，
       </string>
    <string name="defe">网络连接失败</string>
    <string name="offer">建议按照以下方法检查络连接\n
        \t\t\t\t1.打开手机“设置”并把“Wi-Fi”开关保持开启状态。\n
        \t\t\t\t2.打开手机“设置”-“通用”-“蜂窝移动网络”，并把“蜂窝移动数据”开关保持开启状态。\n
        \t\t\t\t3.如果仍无法连接网络，请检查手机接入的“Wi-Fi”是否已接入互联网或者咨询网络运营商。</string>
    <string name="rmb">人民币</string>
    <string name="map_seek">\t\t\t搜地点、查周边、找线路</string>
    <string name="exp">查  询</string>
    <string name="newtep">当前温度</string>
    <string name="newdind">当前风力</string>
    <string name="newpre">当前气压</string>
    <string name="imp">请输入运单号</string>
    <string name="select">请选择快递公司</string>
    <string name="seek">搜索</string>
    <drawable name="clr_normal">#D4D4D4</drawable>
    <drawable name="clr_pressed">#FFF0F5</drawable>
    <drawable name="clr_normal2">#FFB90F</drawable>
    <drawable name="clr_pressed2">#FFFF00</drawable>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="start">开始体验</string>
<string name="walk">步行搜索</string>
    <string name="bus">公交搜索</string>
    <string name="drive">驾车搜索</string>
    <string name="slide_1_title">Lonely</string>
    <string name="slide_2_title">Meet</string>
    <string name="slide_3_title">Fall in love at first sight</string>
    <string name="slide_4_title">Both fall in love</string>
    <string name="slide_5_title">Together forever</string>

    <string name="play_again">play again</string>
    <!-- 驾车路线策略 -->
    <string-array name="drive_spinner1">
        <item>躲避拥堵</item>
        <item>最短距离</item>
        <item>较少费用</item>
        <item>时间优先</item>
    </string-array>

    <!-- 换乘策略 -->
    <string-array name="bus_spinner1">
        <item>不含地铁</item>
        <item>时间优先</item>
        <item>最少换乘</item>
        <item>最少步行距离</item>
    </string-array>

</resources>