<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#EDEDED"
android:orientation="vertical" >
<ImageButton
    android:id="@+id/menu_D"
    android:layout_marginTop="10dp"
    style="@style/return_1"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/daxie1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:textSize="23dp"
        android:gravity="right|bottom"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >
    </TextView>
    <TextView
        android:id="@+id/daxie2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:singleLine="false"
        android:textSize="23dp"
        android:gravity="right|bottom"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >
    </TextView>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/D_seven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/seven" />

        <Button
            android:id="@+id/D_eight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/eight" />

        <Button
            android:id="@+id/D_nine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/nine" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/D_four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/four" />

        <Button
            android:id="@+id/D_five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/five" />

        <Button
            android:id="@+id/D_six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/six" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/D_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/one" />

        <Button
            android:id="@+id/D_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/two" />

        <Button
            android:id="@+id/D_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/three" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/D_zero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/zero" />

        <Button
            android:id="@+id/D_dian"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_1"
            android:text="@string/dian" />
        <Button
            android:id="@+id/D_ac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/btn_2"
            android:text="@string/ac" />

    </LinearLayout>
</LinearLayout>

</LinearLayout>