<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/four"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        style="@style/btn_1"
        android:text="@string/four"
        />

    <Button
        android:id="@+id/five"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        style="@style/btn_1"
        android:text="@string/five"
        />

    <Button
        android:id="@+id/six"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        style="@style/btn_1"
        android:text="@string/six"
        />

    <Button
        android:id="@+id/jian"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        style="@style/btn_2"
        android:text="@string/jian"
        />

</LinearLayout>