<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/seven"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        android:text="@string/seven"
        style="@style/btn_1"
        />

    <Button
        android:id="@+id/eight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        style="@style/btn_1"
        android:text="@string/eight"
        />

    <Button
        android:id="@+id/nine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        style="@style/btn_1"
        android:text="@string/nine"
        />

    <Button
        android:id="@+id/cheng"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="1"
        style="@style/btn_2"
        android:text="@string/ride"
        />
</LinearLayout>