<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical" >
    <ImageButton
        android:id="@+id/menu_a"
        android:layout_marginTop="10dp"
        style="@style/return_1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/area_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:textSize="23dp"
            android:gravity="right|bottom"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            >
        </TextView>
        <Spinner
            android:id="@+id/a_spinner_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">
        </Spinner>

        <TextView
            android:id="@+id/area_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:text=""
            android:textSize="23dp"
            android:gravity="right|bottom"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            >
        </TextView>
        <Spinner
            android:id="@+id/a_spinner_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/a_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/a_eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/a_nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/nine" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/a_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/four" />

            <Button
                android:id="@+id/a_five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/five" />

            <Button
                android:id="@+id/a_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/six" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/a_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/one" />

            <Button
                android:id="@+id/a_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/two" />

            <Button
                android:id="@+id/a_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/three" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/a_zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/zero" />
            <Button
                android:id="@+id/a_dian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_1"
                android:text="@string/dian" />
            <Button
                android:id="@+id/a_ac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/btn_2"
                android:text="@string/ac" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>