<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_weight="1.5"
    android:layout_width="match_parent"
    android:layout_height="0dp">
    <TextView
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="25sp"
        android:background="#EDEDED"
        android:textColor="#7B68EE"
        android:text="@string/exp"/>
    <ImageButton
        android:id="@+id/exp_menu"
        android:layout_marginTop="10dp"
        style="@style/return_1"/>
</RelativeLayout>

    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_b"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/exp_ed"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18sp"
            android:hint="@string/imp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pica"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/select"
            android:id="@+id/textView3" />

        <Spinner
            android:id="@+id/exp_spinner"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:spinnerMode="dialog"
            />

    </LinearLayout>

    <Button
        android:id="@+id/exp_btn"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#FF7F00"
        android:text="@string/exp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"/>
    <ScrollView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/exp_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />
    </ScrollView>

</LinearLayout>